<resources>
    <string name="app_name">QuizyPeasy</string>
    <string name="btnPlay">Play</string>
    <string name="btnHowToPlay">How to play</string>
    <string name="btnPrivacyPolicy">Privacy policy</string>
    <string name="txtViewHowToPlay">How to play</string>
    <string name="howToPLayInstructions">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="btnOk">OK</string>
    <string name="txtViewChooseCategories">Choose Categories</string>
    <string name="btnCreateNewCategory">Create new category</string>
    <string name="txtViewCreateNewCategory">Create New Category</string>
    <string name="btnCreateCategory">Create Category</string>
    <string name="txtViewCategoryName">Category Name</string>
    <string name="btnAddQuestion">Add Question</string>
    <string name="txtViewCreateNewQuestion">Create New Question</string>
    <string name="txtViewA">A</string>
    <string name="txtViewB">B</string>
    <string name="txtViewC">C</string>
    <string name="txtViewD">D</string>
    <string name="btnCreate">Create</string>
    <string name="btnPrevious">Previous</string>
    <string name="btnSkip">Skip</string>
    <string name="btnQuit">Quit</string>
    <string name="txtViewAnswers">Answers</string>
    <string name="btnAnswerA" />
    <string name="txtViewAreYouSure">ARE YOU SURE</string>
    <string name="txtViewThatYouWantToDeleteThisCategory">that you want to delete this category?</string>
    <string name="btnYes">yes</string>
    <string name="btnNo">no</string>
    <string name="txtViewThatYouWantToLeave">that you want to leave?</string>
    <string name="txtViewStats">Stats</string>
    <string name="txtViewCorrect">Correct:</string>
    <string name="txtViewWrong">Wrong:</string>
    <string name="txtViewNumberOfQuestions">x questions:</string>
    <string name="txtViewNumberTotal">x</string>
    <string name="txtViewCorrectNumber">y</string>
    <string name="txtViewWrongNumber">z</string>
    <string name="btnPlayAgain">Play again</string>
    <string name="txtViewPercentage">__%</string>
    <string name="txtViewEditQuestion">Edit Question</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="btnTempTextD">D</string>
    <string name="btnTempTextC">C</string>
    <string name="btnTempTextB">B</string>
    <string name="btnTempTextA">A</string>
    <string name="txtViewCorrectAnswer">Correct answer:</string>
    <string name="background">background</string>
</resources>