<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogs.HowToPlayDialog">

    <!--    guidelines  -->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glContainerOuterLeft"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/glMiddleVertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glContainerOuterRight"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glDialogTop"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glDialogBottom"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glOkTop"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glOkBottom"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>
    <!--    end of guidelines  -->

    <!--    dialog  -->
    <!--    todo font family    -->
    <!--    todo justification   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_round"
        android:id="@+id/clHowToPlayContainer"
        app:layout_constraintTop_toBottomOf="@id/glDialogTop"
        app:layout_constraintBottom_toTopOf="@id/glDialogBottom"
        app:layout_constraintLeft_toLeftOf="@id/glContainerOuterLeft"
        app:layout_constraintRight_toRightOf="@id/glContainerOuterRight"
        android:layout_margin="15dp">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/glDialogHeaderBottom"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/glContainerOuterBottom"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"/>

        <!--    header  -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/glDialogHeaderBottom"
            android:gravity="center"
            android:text="@string/txtViewHowToPlay"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <!--    end of header  -->

        <!--    dialog with scroll  -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/glDialogHeaderBottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@string/howToPLayInstructions"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textColor="@color/black" />
        </ScrollView>
        <!--    end of dialog with scroll  -->

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    end of dialog  -->

    <!--    ok  -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/btnOk"
        android:id="@+id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/glOkTop"
        app:layout_constraintBottom_toTopOf="@+id/glOkBottom"
        app:layout_constraintRight_toLeftOf="@id/glMiddleVertical"
        app:layout_constraintLeft_toRightOf="@id/glMiddleVertical"
        android:background="@color/purple_500"
        android:textSize="18dp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>